--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -1,4 +1,9 @@
 {
   "disclosure": "Shareuhack is reader-supported. When you buy through links on our site, we may earn an affiliate commission.",
-  "learnMore": "Learn More"
+  "learnMore": "Learn More",
+  "knowledge": "Knowledge",
+  "life": "Life",
+  "heath": "Heath",
+  "money": "Money",
+  "work": "Work"
 }
