add some translation

--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -5,5 +5,9 @@
   "life": "Life",
   "heath": "Heath",
   "money": "Money",
-  "work": "Work"
+  "work": "Work",
+  "whatWeDo": "We are keen to research, share and test practical tech and hacks to help you do everything efficiently. Help you become lifehacker!",
+  "howWeDo": "For each article, we will do enough homework, including a lot of reading articles, actual viewing courses, expert interviews, etc., to ensure that the content we produce is up to date.",
+  "latest": "Latest",
+  "hottest": "Hottest"
 }
