--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -5,5 +5,9 @@
   "life": "生活",
   "health": "健康",
   "money": "金錢",
-  "work": "工作"
+  "work": "工作",
+  "whatWeDo": "我們熱衷於研究、分享並實際測試實用的知識、生活密技，幫助你效率的做好每件事，成為LifeHacker！",
+  "howWeDo": "每篇文章，我們都會做足功課，包括大量閱讀文章、實際觀看課程、專家訪談等等，確保我們產出的內容，是與時俱進的",
+  "latest": "最新文章",
+  "hottest": "熱門文章"
 }
