--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -6,8 +6,10 @@
   "heath": "Heath",
   "money": "Money",
   "work": "Work",
-  "whatWeDo": "We are keen to research, share and test practical tech and hacks to help you do everything efficiently. Help you become lifehacker!",
-  "howWeDo": "For each article, we will do enough homework, including a lot of reading articles, actual viewing courses, expert interviews, etc., to ensure that the content we produce is up to date.",
+  "whatWeDo": "What We Do",
+  "whatWeDoDescript": "We are keen to research, share and test practical tech and hacks to help you do everything efficiently. Help you become lifehacker!",
+  "howWeDo": "How We Do",
+  "howWeDoDescript": "For each article, we will do enough homework, including a lot of reading articles, actual viewing courses, expert interviews, etc., to ensure that the content we produce is up to date.",
   "latest": "Latest",
   "hottest": "Hottest"
 }
