--- a/public/locales/en-US/categories.json
+++ b/public/locales/en-US/categories.json
@@ -1,6 +1,4 @@
 {
-  "disclosure": "Shareuhack is reader-supported. When you buy through links on our site, we may earn an affiliate commission.",
-  "learnMore": "Learn More",
   "knowledge": "Knowledge",
   "knowledgeDescript": "Efficient learning is very important, especially when you want to do a lot of things, don't make your own wheels, stand directly on the shoulders of giants!",
   "life": "Life",
@@ -10,11 +8,5 @@
   "money": "Money",
   "moneyDescript": "No money is absolutely impossible, sharing how to make suitable investments according to their own conditions, and how to achieve financial independence and early retirement.",
   "work": "Work",
-  "workDescript": "Working is about 40 hours a week, whether it is looking for a job, changing jobs, improving work efficiency, managing upward or downward, any good change will have a huge impact!",
-  "whatWeDo": "What We Do",
-  "whatWeDoDescript": "We are keen to research, share and test practical tech and hacks to help you do everything efficiently. Help you become lifehacker!",
-  "howWeDo": "How We Do",
-  "howWeDoDescript": "For each article, we will do enough homework, including a lot of reading articles, actual viewing courses, expert interviews, etc., to ensure that the content we produce is up to date.",
-  "latest": "Latest",
-  "hottest": "Hottest"
+  "workDescript": "Working is about 40 hours a week, whether it is looking for a job, changing jobs, improving work efficiency, managing upward or downward, any good change will have a huge impact!"
 }
