--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -5,7 +5,7 @@
   "knowledgeDescript": "Efficient learning is very important, especially when you want to do a lot of things, don't make your own wheels, stand directly on the shoulders of giants!",
   "life": "Life",
   "lifeDescript": "All actions that humans do while they are alive are life. Have the courage to improve and optimize your life, and discover new things you never thought of!",
-  "heath": "Heath",
+  "health": "Health",
   "healthDescript": "Health is the foundation of everything. Share how to have a better posture, stay healthy, and how to better understand your body and mind.",
   "money": "Money",
   "moneyDescript": "No money is absolutely impossible, sharing how to make suitable investments according to their own conditions, and how to achieve financial independence and early retirement.",
