--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -5,7 +5,7 @@
   "knowledgeDescript": "高效率的學習非常的重要，尤其是當你想做的事特別多時，不要自己造輪子，直接站在巨人的肩膀上吧！",
   "life": "生活",
   "lifeDescript": "人類活著的期間所做的一切行為皆是生活。勇於改善、優化生活，發現你從未想到的新鮮事！",
-  "heath": "健康",
+  "health": "健康",
   "healthDescript": "健康是一切的基礎，分享如何擁有更好的體態、保持健康，以及如何更了解你的身體和心靈。",
   "money": "金錢",
   "moneyDescript": "沒有錢萬萬不能，分享如何根據自身條件做適合的投資，以及如何實現財務獨立和提早退休。",
