--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -16,5 +16,7 @@
   "howWeDo": "How We Do",
   "howWeDoDescript": "For each article, we will do enough homework, including a lot of reading articles, actual viewing courses, expert interviews, etc., to ensure that the content we produce is up to date.",
   "latest": "Latest",
-  "hottest": "Hottest"
+  "hottest": "Hottest",
+  "stayTuned": "Will update soon. Stay tuned!",
+  "showAll": "Show All"
 }
