--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -16,5 +16,7 @@
   "howWeDo": "How We Do",
   "howWeDoDescript": "每篇文章，我們都會做足功課，包括大量閱讀文章、實際觀看課程、專家訪談等等，確保我們產出的內容，是與時俱進的",
   "latest": "最新文章",
-  "hottest": "熱門文章"
+  "hottest": "熱門文章",
+  "stayTuned": "近期即將更新文章，既請期待！",
+  "showAll": "顯示全部"
 }
