--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -18,5 +18,9 @@
   "latest": "Latest",
   "hottest": "Hottest",
   "stayTuned": "Will update soon. Stay tuned!",
-  "showAll": "Show All"
+  "showAll": "Show All",
+  "beforewriting": "Before writing this article",
+  "Recommendations": "Recommendations",
+  "References": "References",
+  "sharePost": "Share this post"
 }
