--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -18,5 +18,9 @@
   "latest": "最新文章",
   "hottest": "熱門文章",
   "stayTuned": "近期即將更新文章，既請期待！",
-  "showAll": "顯示全部"
+  "showAll": "顯示全部",
+  "beforewriting": "撰寫這篇文章前",
+  "Recommendations": "推薦資源",
+  "References": "相關資源",
+  "sharePost": "分享這篇文章"
 }
