add lang selector

--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -22,5 +22,6 @@
   "beforewriting": "Before writing this article",
   "Recommendations": "Recommendations",
   "References": "References",
-  "sharePost": "Share this post"
+  "sharePost": "Share this post",
+  "selectLocale": "Please select language"
 }
