--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -22,5 +22,6 @@
   "beforewriting": "撰写这篇文章前",
   "Recommendations": "推荐资源",
   "References": "相关资源",
-  "sharePost": "分享这篇文章"
+  "sharePost": "分享这篇文章",
+  "selectLocale": "请选择语言"
 }
