--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -22,5 +22,6 @@
   "beforewriting": "撰寫這篇文章前",
   "Recommendations": "推薦資源",
   "References": "相關資源",
-  "sharePost": "分享這篇文章"
+  "sharePost": "分享這篇文章",
+  "selectLocale": "請選擇語言"
 }
