--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -23,5 +23,5 @@
   "Recommendations": "Recommendations",
   "References": "References",
   "sharePost": "Share this post",
-  "selectLocale": "Please select language"
+  "selectLocale": "Please Select Language & Region"
 }
