--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -23,5 +23,5 @@
   "Recommendations": "推荐资源",
   "References": "相关资源",
   "sharePost": "分享这篇文章",
-  "selectLocale": "请选择语言"
+  "selectLocale": "请选择语言和地区"
 }
