--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -23,5 +23,5 @@
   "Recommendations": "推薦資源",
   "References": "相關資源",
   "sharePost": "分享這篇文章",
-  "selectLocale": "請選擇語言"
+  "selectLocale": "請選擇語言和地區"
 }
