add learn-to-financial-freedom-from-amazon-bestsellers and refine translations

--- a/public/locales/en-US/subCategory.json
+++ b/public/locales/en-US/subCategory.json
@@ -4,5 +4,7 @@
   "projectManagement": "Project Management",
   "projectManagementDescript": "Project management is the process of leading a team under various constraints and achieving project goals.",
   "eLearning": "E-Learning",
-  "eLearningDescript": "The best way to learn in 2021"
+  "eLearningDescript": "The best way to learn in 2021",
+  "finance": "Financial Finance",
+  "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!"
 }
