--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -4,5 +4,7 @@
   "projectManagement": "专案管理",
   "projectManagementDescript": "专案管理是指在各种限制条件下，带领团队，合作并完成专案目标的过程",
   "eLearning": "线上学习",
-  "eLearningDescript": "线上学习，2021已成显学"
+  "eLearningDescript": "线上学习，2021已成显学",
+  "finance": "财务金融",
+  "financeDescript": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！"
 }
