--- a/public/locales/zh-MO/subCategory.json
+++ b/public/locales/zh-MO/subCategory.json
@@ -4,5 +4,7 @@
   "projectManagement": "專案管理",
   "projectManagementDescript": "專案管理是指在各種限制條件下，帶領團隊，合作並完成專案目標的過程",
   "eLearning": "線上學習",
-  "eLearningDescript": "線上學習，2021已成顯學"
+  "eLearningDescript": "線上學習，2021已成顯學",
+  "finance": "財務金融",
+  "financeDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！"
 }
