--- a/public/locales/en-US/subCategory.json
+++ b/public/locales/en-US/subCategory.json
@@ -5,6 +5,6 @@
   "projectManagementDescript": "Project management is the process of leading a team under various constraints and achieving project goals.",
   "eLearning": "E-Learning",
   "eLearningDescript": "The best way to learn in 2021",
-  "finance": "Financial Finance",
+  "finance": "Finance",
   "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!"
 }
