--- a/public/locales/ja-JP/common.json
+++ b/public/locales/ja-JP/common.json
@@ -23,5 +23,6 @@
   "Recommendations": "推奨事項",
   "References": "参考文献",
   "sharePost": "この投稿を共有する",
-  "selectLocale": "使用言語と地域を選択してください"
+  "selectLocale": "使用言語と地域を選択してください",
+  "pageTitle": "人生の秘密、戦略、知りたいこと"
 }
