--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -23,5 +23,6 @@
   "Recommendations": "Recommendations",
   "References": "References",
   "sharePost": "Share this post",
-  "selectLocale": "Please Select Language & Region"
+  "selectLocale": "Please Select Language & Region",
+  "pageTitle": "Hacks for the real world"
 }
