--- a/public/locales/zh-MO/common.json
+++ b/public/locales/zh-MO/common.json
@@ -23,5 +23,6 @@
   "Recommendations": "推薦資源",
   "References": "相關資源",
   "sharePost": "分享這篇文章",
-  "selectLocale": "請選擇語言和地區"
+  "selectLocale": "請選擇語言和地區",
+  "pageTitle": "生活祕技、攻略和你想知道的事"
 }
