[post] what-is-drop-servicing

--- a/public/locales/en-GB/subCategory.json
+++ b/public/locales/en-GB/subCategory.json
@@ -6,5 +6,7 @@
   "eLearning": "E-Learning",
   "eLearningDescript": "The best way to learn in 2021",
   "finance": "Finance",
-  "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!"
+  "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!",
+  "business": "Business",
+  "businessDescript": "Expand business vision and learn hacks of getting rich"
 }
