--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -6,5 +6,7 @@
   "eLearning": "E-Learning",
   "eLearningDescript": "2021年に学ぶための最良の方法",
   "finance": "ファイナンス",
-  "financeDescript": "予算を設定する方法、あなたに適した投資、裕福になり、早期退職する方法は？ 唯一の近道はあなた自身の頭に投資することです！"
+  "financeDescript": "予算を設定する方法、あなたに適した投資、裕福になり、早期退職する方法は？ 唯一の近道はあなた自身の頭に投資することです！",
+  "business": "ビジネス",
+  "businessDescript": "ビジネスビジョンを拡大し、金持ちになるという考えを育む"
 }
