--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -6,5 +6,7 @@
   "eLearning": "线上学习",
   "eLearningDescript": "线上学习，2021已成显学",
   "finance": "财务金融",
-  "financeDescript": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！"
+  "financeDescript": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！",
+  "business": "商业",
+  "businessDescript": "拓展商业视野，培养致富思维"
 }
