--- a/public/locales/zh-HK/subCategory.json
+++ b/public/locales/zh-HK/subCategory.json
@@ -6,5 +6,7 @@
   "eLearning": "線上學習",
   "eLearningDescript": "線上學習，2021已成顯學",
   "finance": "財務金融",
-  "financeDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！"
+  "financeDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！",
+  "business": "商業",
+  "businessDescript": "拓展商業視野，培養致富思維"
 }
