add subCategory locales

--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -8,5 +8,7 @@
   "finance": "ファイナンス",
   "financeDescript": "予算を設定する方法、あなたに適した投資、裕福になり、早期退職する方法は？ 唯一の近道はあなた自身の頭に投資することです！",
   "business": "ビジネス",
-  "businessDescript": "ビジネスビジョンを拡大し、金持ちになるという考えを育む"
+  "businessDescript": "ビジネスビジョンを拡大し、金持ちになるという考えを育む",
+  "travel": "旅行",
+  "travelDescript": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。"
 }
