--- a/public/locales/en-US/subCategory.json
+++ b/public/locales/en-US/subCategory.json
@@ -8,5 +8,7 @@
   "finance": "Finance",
   "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!",
   "business": "Business",
-  "businessDescript": "Expand business vision and learn hacks of getting rich"
+  "businessDescript": "Expand business vision and learn hacks of getting rich",
+  "travel": "Travel",
+  "travelDescript": "Life is a journey. What you care about is not the destination, but the scenery and mood along the way."
 }
