--- a/public/locales/zh-TW/subCategory.json
+++ b/public/locales/zh-TW/subCategory.json
@@ -8,5 +8,7 @@
   "finance": "財務金融",
   "financeDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！",
   "business": "商業",
-  "businessDescript": "拓展商業視野，培養致富思維"
+  "businessDescript": "拓展商業視野，培養致富思維",
+  "travel": "旅行",
+  "travelDescript": "人生是一場旅行，在乎的不是目的地，是沿途的風景和心情。"
 }
