--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -10,5 +10,7 @@
   "business": "ビジネス",
   "businessDescript": "ビジネスビジョンを拡大し、金持ちになるという考えを育む",
   "travel": "旅行",
-  "travelDescript": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。"
+  "travelDescript": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。",
+  "productivity": "生産力",
+  "productivityDescript": "最小限の労力で最大の価値を生み出します。"
 }
