--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -10,5 +10,7 @@
   "business": "商业",
   "businessDescript": "拓展商业视野，培养致富思维",
   "travel": "旅行",
-  "travelDescript": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。"
+  "travelDescript": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。",
+  "productivity": "生产力",
+  "productivityDescript": "花最小的工夫，产出最大的价值。"
 }
