--- a/public/locales/zh-MO/subCategory.json
+++ b/public/locales/zh-MO/subCategory.json
@@ -10,5 +10,7 @@
   "business": "商業",
   "businessDescript": "拓展商業視野，培養致富思維",
   "travel": "旅行",
-  "travelDescript": "人生是一場旅行，在乎的不是目的地，是沿途的風景和心情。"
+  "travelDescript": "人生是一場旅行，在乎的不是目的地，是沿途的風景和心情。",
+  "productivity": "生產力",
+  "productivityDescript": "花最小的工夫，產出最大的價值。"
 }
