--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -24,5 +24,5 @@
   "References": "References",
   "sharePost": "Share this post",
   "selectLocale": "Please Select Language & Region",
-  "pageTitle": "Hacks for the real world"
+  "pageTitle": "Hacks for the real life"
 }
