--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -12,5 +12,7 @@
   "travel": "旅行",
   "travelDescript": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。",
   "productivity": "生産力",
-  "productivityDescript": "最小限の労力で最大の価値を生み出します。"
+  "productivityDescript": "最小限の労力で最大の価値を生み出します。",
+  "lifeTip": "人生の秘訣",
+  "lifeTipDescript": "ちょっとしたトリック、あなたの人生を大きく変える"
 }
