--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -12,5 +12,7 @@
   "travel": "旅行",
   "travelDescript": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。",
   "productivity": "生产力",
-  "productivityDescript": "花最小的工夫，产出最大的价值。"
+  "productivityDescript": "花最小的工夫，产出最大的价值。",
+  "lifeTip": "生活小诀窍",
+  "lifeTipDescript": "小小窍门，大大翻转你的人生"
 }
