--- a/public/locales/zh-MO/subCategory.json
+++ b/public/locales/zh-MO/subCategory.json
@@ -12,5 +12,7 @@
   "travel": "旅行",
   "travelDescript": "人生是一場旅行，在乎的不是目的地，是沿途的風景和心情。",
   "productivity": "生產力",
-  "productivityDescript": "花最小的工夫，產出最大的價值。"
+  "productivityDescript": "花最小的工夫，產出最大的價值。",
+  "lifeTip": "生活小訣竅",
+  "lifeTipDescript": "小小竅門，大大翻轉你的人生"
 }
