--- a/public/locales/en-SG/subCategory.json
+++ b/public/locales/en-SG/subCategory.json
@@ -13,6 +13,6 @@
   "travelDescript": "Life is a journey. What you care about is not the destination, but the scenery and mood along the way.",
   "productivity": "Productivity",
   "productivityDescript": "Minimize input, maxmize ouput.",
-  "lifeTip": "Life Tips",
-  "lifeTipDescript": "Little tips that can change your life."
+  "lifePhilosophy": "Life Philosophy",
+  "lifePhilosophyDescript": "Make your life a real life, not just survival."
 }
