--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -13,6 +13,6 @@
   "travelDescript": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。",
   "productivity": "生产力",
   "productivityDescript": "花最小的工夫，产出最大的价值。",
-  "lifeTip": "生活哲学",
-  "lifeTipDescript": "让你的生活成为真正的生活， 而不仅是生存。"
+  "lifePhilosophy": "生活哲学",
+  "lifePhilosophyDescript": "让你的生活成为真正的生活， 而不仅是生存。"
 }
