--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -14,5 +14,7 @@
   "productivity": "生产力",
   "productivityDescript": "花最小的工夫，产出最大的价值。",
   "lifePhilosophy": "生活哲学",
-  "lifePhilosophyDescript": "让你的生活成为真正的生活， 而不仅是生存。"
+  "lifePhilosophyDescript": "让你的生活成为真正的生活， 而不仅是生存。",
+  "education": "教育",
+  "educationDescript": "促进知识、技能、价值、道德、信念的获得，与个人成长的过程"
 }
