--- a/public/locales/zh-HK/subCategory.json
+++ b/public/locales/zh-HK/subCategory.json
@@ -14,5 +14,7 @@
   "productivity": "生產力",
   "productivityDescript": "花最小的工夫，產出最大的價值。",
   "lifePhilosophy": "生活哲學",
-  "lifePhilosophyDescript": "讓你的生活成為真正的生活， 而不僅是生存。"
+  "lifePhilosophyDescript": "讓你的生活成為真正的生活， 而不僅是生存。",
+  "education": "教育",
+  "educationDescript": "促進知識、技能、價值、道德、信念的獲得，與個人成長的過程"
 }
