--- a/public/locales/en-US/subCategory.json
+++ b/public/locales/en-US/subCategory.json
@@ -14,5 +14,7 @@
   "productivity": "Productivity",
   "productivityDescript": "Minimize input, maxmize ouput.",
   "lifePhilosophy": "Life Philosophy",
-  "lifePhilosophyDescript": "Make your life a real life, not just survival."
+  "lifePhilosophyDescript": "Make your life a real life, not just survival.",
+  "education": "Education",
+  "educationDescript": "The process of facilitating learning, or the acquisition of knowledge, skills, values, morals, beliefs, habits, and personal development."
 }
