--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -14,5 +14,7 @@
   "productivity": "生産力",
   "productivityDescript": "最小限の労力で最大の価値を生み出します。",
   "lifePhilosophy": "Life Philosophy",
-  "lifePhilosophyDescript": "Make your life a real life, not just survival."
+  "lifePhilosophyDescript": "Make your life a real life, not just survival.",
+  "education": "教育",
+  "educationDescript": "学習を促進するプロセス、または知識、スキル、価値観、道徳、信念、習慣、および自己啓発の習得。"
 }
