--- a/public/locales/en-GB/subCategory.json
+++ b/public/locales/en-GB/subCategory.json
@@ -5,10 +5,10 @@
   "projectManagementDescript": "Project management is the process of leading a team under various constraints and achieving project goals.",
   "eLearning": "E-Learning",
   "eLearningDescript": "The best way to learn in 2021",
-  "finance": "Finance",
-  "financeDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!",
-  "business": "Business",
-  "businessDescript": "Expand business vision and learn hacks of getting rich",
+  "investment": "Money & Investments",
+  "investmentDescript": "How to set a budget, what investment is right for you, how to be wealthy, and retire early? The only shortcut is to invest in your own head!",
+  "entrepreneurship": "Entrepreneurship",
+  "entrepreneurshipDescript": "Entrepreneurship is the creation or extraction of value.",
   "travel": "Travel",
   "travelDescript": "Life is a journey. What you care about is not the destination, but the scenery and mood along the way.",
   "productivity": "Productivity",
