--- a/public/locales/ja-JP/subCategory.json
+++ b/public/locales/ja-JP/subCategory.json
@@ -5,10 +5,10 @@
   "projectManagementDescript": "プロジェクト管理は、さまざまな制約の下でチームを主導し、プロジェクトの目標を達成するプロセスです。",
   "eLearning": "E-Learning",
   "eLearningDescript": "2021年に学ぶための最良の方法",
-  "finance": "ファイナンス",
-  "financeDescript": "予算を設定する方法、あなたに適した投資、裕福になり、早期退職する方法は？ 唯一の近道はあなた自身の頭に投資することです！",
-  "business": "ビジネス",
-  "businessDescript": "ビジネスビジョンを拡大し、金持ちになるという考えを育む",
+  "investment": "お金と投資",
+  "investmentDescript": "予算を設定する方法、あなたに適した投資、裕福になり、早期退職する方法は？ 唯一の近道はあなた自身の頭に投資することです！",
+  "entrepreneurship": "起業家精神",
+  "entrepreneurshipDescript": "起業家精神とは、価値の創造または抽出です。",
   "travel": "旅行",
   "travelDescript": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。",
   "productivity": "生産力",
