--- a/public/locales/zh-CN/subCategory.json
+++ b/public/locales/zh-CN/subCategory.json
@@ -5,10 +5,10 @@
   "projectManagementDescript": "专案管理是指在各种限制条件下，带领团队，合作并完成专案目标的过程",
   "eLearning": "线上学习",
   "eLearningDescript": "线上学习，2021已成显学",
-  "finance": "财务金融",
-  "financeDescript": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！",
-  "business": "商业",
-  "businessDescript": "拓展商业视野，培养致富思维",
+  "investment": "投资理财",
+  "investmentDescript": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！",
+  "entrepreneurship": "创业",
+  "entrepreneurshipDescript": "拓展商业视野，培养致富思维",
   "travel": "旅行",
   "travelDescript": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。",
   "productivity": "生产力",
