--- a/public/locales/zh-MO/subCategory.json
+++ b/public/locales/zh-MO/subCategory.json
@@ -5,10 +5,10 @@
   "projectManagementDescript": "專案管理是指在各種限制條件下，帶領團隊，合作並完成專案目標的過程",
   "eLearning": "線上學習",
   "eLearningDescript": "線上學習，2021已成顯學",
-  "finance": "財務金融",
-  "financeDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！",
-  "business": "商業",
-  "businessDescript": "拓展商業視野，培養致富思維",
+  "investment": "投資理財",
+  "investmentDescript": "如何訂定預算、什麼投資適合自己、如何財富自由、提早退休？唯一的捷徑是投資自己腦袋！",
+  "entrepreneurship": "創業",
+  "entrepreneurshipDescript": "拓展商業視野，培養致富思維",
   "travel": "旅行",
   "travelDescript": "人生是一場旅行，在乎的不是目的地，是沿途的風景和心情。",
   "productivity": "生產力",
