--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -1,16 +1,6 @@
 {
   "disclosure": "Shareuhack是仰赖用户支持而持续产生内容的，当您透过网站内的连结购买商品或课程，我们可能因此收益。",
   "learnMore": "了解更多",
-  "knowledge": "学习",
-  "knowledgeDescript": "高效率的学习非常的重要，尤其是当你想做的事特别多时，不要自己造轮子，直接站在巨人的肩膀上吧！",
-  "life": "生活",
-  "lifeDescript": "人类活着的期间所做的一切行为皆是生活。勇于改善、优化生活，发现你从未想到的新鲜事！",
-  "health": "健康",
-  "healthDescript": "健康是一切的基础，分享如何拥有更好的体态、保持健康，以及如何更了解你的身体和心灵。",
-  "money": "金钱",
-  "moneyDescript": "没有钱万万不能，分享如何根据自身条件做适合的投资，以及如何实现财务独立和提早退休。",
-  "work": "工作",
-  "workDescript": "每周工作40小时，无论是要找工作、转职、提升工作效率、向上或向下管理，任何良好的改变，影响都非常巨大！",
   "whatWeDo": "What We Do",
   "whatWeDoDescript": "我们热衷于研究、分享并实际测试实用的知识、生活密技，帮助你效率的做好每件事，成为LifeHacker！",
   "howWeDo": "How We Do",
@@ -24,5 +14,60 @@
   "References": "相关资源",
   "sharePost": "分享这篇文章",
   "selectLocale": "请选择语言和地区",
-  "pageTitle": "生活秘技、攻略和你想知道的事"
+  "pageTitle": "生活秘技、攻略和你想知道的事",
+  "categories": {
+    "knowledge": {
+      "title": "聪明学习",
+      "description": "高效率的学习非常的重要，尤其是当你想做的事特别多时，不要自己造轮子，直接站在巨人的肩膀上吧！"
+    },
+    "life": {
+      "title": "生活骇客",
+      "description": "人类活着的期间所做的一切行为皆是生活。勇于改善、优化生活，发现你从未想到的新鲜事！"
+    },
+    "money": {
+      "title": "金钱游戏",
+      "description": "聪明投资，实现财富自由；拓展商业视野，培养致富思维！"
+    },
+    "work": {
+      "title": "职场生存",
+      "workDescript": "每周工作40小时，无论是要找工作、转职、提升工作效率、向上或向下管理，任何良好的改变，影响都非常巨大！"
+    }
+  },
+  "subCategories": {
+    "softwareDevelopment": {
+      "title": "软体开发",
+      "description": "敲敲键盘，改变世界！"
+    },
+    "projectManagement": {
+      "title": "专案管理",
+      "description": "专案管理是指在各种限制条件下，带领团队，合作并完成专案目标的过程"
+    },
+    "investment": {
+      "title": "投资理财",
+      "description": "如何订定预算、什么投资适合自己、如何财富自由、提早退休？唯一的捷径是投资自己脑袋！"
+    },
+    "entrepreneurship": {
+      "title": "创业",
+      "description": "承担风险，创造新产品和服务。"
+    },
+    "travel": {
+      "title": "旅行",
+      "description": "人生是一场旅行，在乎的不是目的地，是沿途的风景和心情。"
+    },
+    "productivity": {
+      "title": "生產力",
+      "description": "花最小的工夫，產出最大的價值。"
+    },
+    "lifePhilosophy": {
+      "title": "生产力",
+      "description": "让你的生活成为真正的生活， 而不仅是生存。"
+    },
+    "education": {
+      "title": "教育",
+      "description": "促进知识、技能、价值、道德、信念的获得，与个人成长的过程"
+    }
+  },
+  "footer": {
+    "copyright": "Copyright @ Shareuhack 2021. All Rights Reserved."
+  }
 }
