--- a/public/locales/ja-JP/common.json
+++ b/public/locales/ja-JP/common.json
@@ -40,7 +40,7 @@
     },
     "work": {
       "title": "職場サバイバルガイド",
-      "workDescript": "仕事を探している、転職している、仕事の効率を改善している、上向きまたは下向きに管理しているなど、週40時間働くことは、どんな良い変化でも大きな影響を及ぼします！"
+      "description": "仕事を探している、転職している、仕事の効率を改善している、上向きまたは下向きに管理しているなど、週40時間働くことは、どんな良い変化でも大きな影響を及ぼします！"
     }
   },
   "subCategories": {
