--- a/public/locales/en-GB/subCategory.json
+++ b/public/locales/en-GB/subCategory.json
@@ -1,6 +1,6 @@
 {
-  "frontendDev": "Front-end Development",
-  "frontendDevDescript": "Front-end web development is the development of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. ",
+  "softwareDevelopment": "Front-end Development",
+  "softwareDevelopmentDescript": "Front-end web development is the development of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. ",
   "projectManagement": "Project Management",
   "projectManagementDescript": "Project management is the process of leading a team under various constraints and achieving project goals.",
   "eLearning": "E-Learning",
