--- a/public/locales/en-SG/common.json
+++ b/public/locales/en-SG/common.json
@@ -30,7 +30,7 @@
     },
     "work": {
       "title": "Career Survial Kit",
-      "workDescript": "Working 40 hours a week, whether it is looking for a job, changing jobs, improving work efficiency, managing upward or downward, any good change will have a huge impact!"
+      "description": "Working 40 hours a week, whether it is looking for a job, changing jobs, improving work efficiency, managing upward or downward, any good change will have a huge impact!"
     }
   },
   "subCategories": {
