--- a/public/locales/zh-MO/common.json
+++ b/public/locales/zh-MO/common.json
@@ -30,7 +30,7 @@
     },
     "work": {
       "title": "職場生存",
-      "workDescript": "每週工作40小時，無論是要找工作、轉職、提升工作效率、向上或向下管理，任何良好的改變，影響都非常巨大！"
+      "description": "每週工作40小時，無論是要找工作、轉職、提升工作效率、向上或向下管理，任何良好的改變，影響都非常巨大！"
     }
   },
   "subCategories": {
