--- a/public/locales/zh-TW/subCategory.json
+++ b/public/locales/zh-TW/subCategory.json
@@ -1,6 +1,6 @@
 {
-  "frontendDev": "前端開發",
-  "frontendDevDescript": "前端開發是通過HTML/CSS/JavsScript以及衍生的各種技術、框架、解決方案，創建網站、APP等介面，實現和網路產品用戶的互動。",
+  "softwareDevelopment": "前端開發",
+  "softwareDevelopmentDescript": "前端開發是通過HTML/CSS/JavsScript以及衍生的各種技術、框架、解決方案，創建網站、APP等介面，實現和網路產品用戶的互動。",
   "projectManagement": "專案管理",
   "projectManagementDescript": "專案管理是指在各種限制條件下，帶領團隊，合作並完成專案目標的過程",
   "eLearning": "線上學習",
