--- a/public/locales/ja-JP/common.json
+++ b/public/locales/ja-JP/common.json
@@ -75,6 +75,10 @@
     "education": {
       "title": "教育",
       "description": "教育とは、学習を促進するプロセス、または知識、スキル、価値観、道徳、信念、習慣、および自己啓発の習得を促進するプロセスです。"
+    },
+    "managementAndLeadership": {
+      "title": "管理とリーダーシップ",
+      "description": "組織に影響を与え、組織に最大の価値をもたらすために十分な努力をしてください。"
     }
   },
   "footer": {
