--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -11,7 +11,7 @@
   "showAll": "显示全部",
   "beforewriting": "撰写这篇文章前",
   "Recommendations": "推荐资源",
-  "References": "相关资源",
+  "References": "相关资料",
   "sharePost": "分享这篇文章",
   "selectLocale": "请选择语言和地区",
   "pageTitle": "生活秘技、攻略和你想知道的事",
