--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -11,7 +11,7 @@
   "showAll": "顯示全部",
   "beforewriting": "撰寫這篇文章前",
   "Recommendations": "推薦資源",
-  "References": "相關資源",
+  "References": "相關資料",
   "sharePost": "分享這篇文章",
   "selectLocale": "請選擇語言和地區",
   "pageTitle": "生活祕技、攻略和你想知道的事",
