--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -1,4 +1,6 @@
 {
+  "home": "首页",
+  "about": "关于我们",
   "disclosure": "Shareuhack是仰赖用户支持而持续产生内容的，当您透过网站内的连结购买商品或课程，我们可能因此收益。",
   "learnMore": "了解更多",
   "whatWeDo": "What We Do",
