--- a/public/locales/ja-JP/common.json
+++ b/public/locales/ja-JP/common.json
@@ -1,6 +1,7 @@
 {
   "home": "ホームページ",
   "about": "私たちに関しては",
+  "subscribe": "Subscribe Us",
   "disclosure": "Shareuhackは読者によってサポートされています。当サイトのリンクから購入すると、アフィリエイト手数料が発生する場合があります。",
   "learnMore": "Learn More",
   "knowledge": "知識",
