--- a/public/locales/en-SG/common.json
+++ b/public/locales/en-SG/common.json
@@ -1,6 +1,7 @@
 {
   "home": "Home Page",
   "about": "About Us",
+  "subscribe": "Subscribe Us",
   "disclosure": "Shareuhack is reader-supported. When you buy through links on our site, we may earn an affiliate commission.",
   "learnMore": "Learn More",
   "whatWeDo": "What We Do",
