--- a/public/locales/ja-JP/common.json
+++ b/public/locales/ja-JP/common.json
@@ -27,7 +27,7 @@
   "References": "参考文献",
   "sharePost": "この投稿を共有する",
   "selectLocale": "使用言語と地域を選択してください",
-  "pageTitle": "人生の秘密、戦略、知りたいこと",
+  "pageTitle": "Hacks for real life",
   "categories": {
     "knowledge": {
       "title": "スマートラーニング",
