--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -17,7 +17,7 @@
   "References": "相關資料",
   "sharePost": "分享這篇文章",
   "selectLocale": "請選擇語言和地區",
-  "pageTitle": "生活祕技、攻略和你想知道的事",
+  "pageTitle": "Hacks for real life",
   "categories": {
     "knowledge": {
       "title": "聰明學習",
