--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,7 +16,7 @@
   "Recommendations": "Recommendations",
   "References": "References",
   "sharePost": "Share this post",
-  "selectLocale": "Please Select Language & Region",
+  "selectLocale": "Please Select Language",
   "pageTitle": "Hacks for real life",
   "categories": {
     "knowledge": {
