--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -26,7 +26,7 @@
   "Recommendations": "推奨事項",
   "References": "参考文献",
   "sharePost": "この投稿を共有する",
-  "selectLocale": "使用言語と地域を選択してください",
+  "selectLocale": "言語を選択してください",
   "pageTitle": "Hacks for real life",
   "categories": {
     "knowledge": {
