--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -16,7 +16,7 @@
   "Recommendations": "推薦資源",
   "References": "相關資料",
   "sharePost": "分享這篇文章",
-  "selectLocale": "請選擇語言和地區",
+  "selectLocale": "請選擇語言",
   "pageTitle": "Hacks for real life",
   "categories": {
     "knowledge": {
