--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -35,7 +35,7 @@
     },
     "life": {
       "title": "人生の秘密",
-      "description": "All actions that humans do while they are alive are life. Have the courage to improve and optimize your life, and discover new things you never thought of!"
+      "description": "人間が生きている間に行うすべての行動は生命です。 あなたの人生を改善し、最適化する勇気を持ち、あなたが考えもしなかった新しいことを発見してください！"
     },
     "money": {
       "title": "お金",
