--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -72,6 +72,10 @@
     "managementAndLeadership": {
       "title": "管理和領導力",
       "description": "發揮影響力，給組織帶來最大價值。"
+    },
+    "mindfulness": {
+      "title": "正念",
+      "description": "將思想固定在某個對象上並專注地觀察的穩定的心理狀態。"
     }
   },
   "footer": {
