--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -1,7 +1,7 @@
 {
   "home": "首頁",
   "about": "關於我們",
-  "crypto": "加密貨幣",
+  "crypto": "Crypto",
   "subscribe": "訂閱我們",
   "disclosure": "Shareuhack是仰賴用戶支持而持續產生內容的，當您透過網站內的連結購買商品或課程，我們可能因此收益。",
   "learnMore": "了解更多",
