--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,87 +1,83 @@
 {
-  "home": "ホームページ",
-  "about": "私たちに関しては",
-  "subscribe": "Subscribe Us",
-  "disclosure": "Shareuhackは読者によってサポートされています。当サイトのリンクから購入すると、アフィリエイト手数料が発生する場合があります。",
-  "learnMore": "Learn More",
-  "knowledge": "知識",
-  "knowledgeDescript": "効率的な学習は非常に重要です。特に、たくさんのことをしたいときは、自分で車輪を作らず、巨人の肩の上に直接立ってください！",
-  "life": "生活",
-  "lifeDescript": "人間が生きている間に行うすべての行動は生活です。あなたの生活を改善および最適化し、あなたが考えもしなかった新しいことを発見する勇気を持ってください！",
-  "health": "健康",
-  "healthDescript": "健康はすべての基盤です。より良い姿勢を取り、健康を維持する方法、そしてあなたの体と心をよりよく理解する方法を共有してください。",
-  "money": "お金",
-  "moneyDescript": "自分の状況に応じて適切な投資を行う方法や、経済的自立と早期退職を実現する方法を共有することで、絶対に不可能なお金はありません。",
-  "work": "仕事",
-  "workDescript": "仕事は週に約40時間です。仕事を探している、転職している、仕事の効率を改善している、上向きまたは下向きに管理しているなど、どんな良い変化でも大きな影響があります。",
-  "whatWeDo": "私達がすること",
-  "whatWeDoDescript": "私たちは、実用的な技術とハックを調査、共有、テストして、すべてを効率的に行うのに役立てたいと考えています。Lifehackerになるのを手伝ってください。",
-  "howWeDo": "どのように我々が行う",
-  "howWeDoDescript": "記事ごとに、たくさんの読書記事、実際の視聴コース、専門家のインタビューなどを含む十分な宿題を行い、作成するコンテンツが最新であることを確認します。",
-  "latest": "最新",
-  "hottest": "最も人気のある",
-  "stayTuned": "間もなく更新されます。お楽しみに！",
-  "showAll": "すべて表示する",
+  "home": "ホーム",
+  "about": "紹介",
+  "crypto": "Crypto ダッシュボード",
+  "cryptoDescript": "暗号通貨の重要なデータを一手に掌握",
+  "subscribe": "購読する",
+  "disclosure": "Shareuhackはユーザーサポートに依存してコンテンツを継続的に提供しています。当ウェブサイトのリンクを通じて商品やコースを購入される場合、私たちはそれにより収益を得ることがあります。",
+  "learnMore": "もっと知る",
+  "whatWeDo": "私たちの活動",
+  "whatWeDoDescript": "私たちは実用的な知識やライフハックを研究し、共有、テストすることに情熱を注ぎます。あなたがすべてを効率よく行い、ライフハッカーになる手助けをします！",
+  "howWeDo": "私たちの手法",
+  "howWeDoDescript": "私たちの各記事は数日から数週間かけて研究され、信頼できる情報源から大量のデータを収集し整理します。",
+  "latest": "最新記事",
+  "hottest": "人気記事",
+  "stayTuned": "近日更新予定の記事、お楽しみに！",
+  "showAll": "全て表示",
   "beforewriting": "この記事を書く前に",
-  "Recommendations": "推奨事項",
-  "References": "参考文献",
-  "sharePost": "この投稿を共有する",
+  "Recommendations": "おすすめリソース",
+  "References": "関連情報",
+  "sharePost": "この記事をシェアする",
   "selectLocale": "言語を選択してください",
-  "pageTitle": "Hacks for real life",
+  "pageTitle": "リアルライフのハック",
   "categories": {
     "knowledge": {
-      "title": "スマートラーニング",
-      "description": "効率的な学習は非常に重要です。特に、たくさんのことをしたいときは、自分で車輪を作らず、巨人の肩の上に直接立ってください。"
+      "title": "知識習得",
+      "description": "効率的な学習は非常に重要です。特に多くのことをしたい場合は、車輪の再発明を避けて、巨人の肩に乗ることができます！"
     },
     "life": {
-      "title": "人生の秘密",
-      "description": "人間が生きている間に行うすべての行動は生命です。 あなたの人生を改善し、最適化する勇気を持ち、あなたが考えもしなかった新しいことを発見してください！"
+      "title": "ライフハッカー",
+      "description": "人間の生活の中で行われたすべての行動は生活です。生活を改善し、新しい発見をする勇気を持ってください！"
     },
     "money": {
-      "title": "お金",
-      "description": "賢く投資して富の自由を実現し、ビジネスの視野を広げ、金持ちになるという考えを育てましょう！"
+      "title": "マネーゲーム",
+      "description": "賢い投資で財務自由を実現し、ビジネス視野を広げ、富を築く思考を培ってください！"
     },
     "work": {
-      "title": "職場サバイバルガイド",
-      "description": "仕事を探している、転職している、仕事の効率を改善している、上向きまたは下向きに管理しているなど、週40時間働くことは、どんな良い変化でも大きな影響を及ぼします！"
+      "title": "職場で生き残る",
+      "description": "週に40時間働くことは、仕事を見つける、転職する、効率を上げる、上司や部下を管理することには非常に重要です！"
     }
   },
   "subCategories": {
     "softwareDevelopment": {
       "title": "ソフトウェア開発",
-      "description": "世界を変えるためのコーディング！"
+      "description": "キーボードを叩いて、世界を変えよう！"
     },
     "projectManagement": {
       "title": "プロジェクト管理",
-      "description": "プロジェクト管理は、与えられた制約内ですべてのプロジェクト目標を達成するためにチームの作業を主導するプロセスです。"
+      "description": "プロジェクト管理とは、さまざまな制約の中でチームをリードし、協力してプロジェクトの目標を達成するプロセスです。"
     },
     "investment": {
-      "title": "お金と投資",
-      "description": "投資するということは、投資または投資の評価から収入を生み出すことを目的とした資産またはアイテムを所有することを意味します。これは、一定期間にわたる資産の価値の増加です。"
+      "title": "投資と財務",
+      "description": "予算を設定する方法、自分に合った投資、財務自由をどう達成するか、早期退職するか？唯一の近道は自分の頭を投資することです！"
     },
     "entrepreneurship": {
-      "title": "起業家精神",
-      "description": "承担风险、创造新製品品和服务。"
+      "title": "起業",
+      "description": "リスクを取り、新しい製品やサービスを作り出すことです。"
     },
     "travel": {
       "title": "旅行",
-      "description": "人生は旅です。あなたが気にするのは目的地ではなく、途中の景色と気分です。"
+      "description": "人生は旅です。目的地ではなく、途中の景色と気分が重要です。"
     },
     "productivity": {
       "title": "生産性",
-      "description": "最小限の労力で最大の価値を生み出します。"
+      "description": "最小限の労力で最大の価値を生み出すことです。"
     },
     "lifePhilosophy": {
-      "title": "人生哲学",
-      "description": "生き残るだけでなく、あなたの人生を現実の生活にしてください。"
+      "title": "生活哲学",
+      "description": "あなたの生活が生きること、ただの生存ではないことを実現します。"
     },
     "education": {
       "title": "教育",
-      "description": "教育とは、学習を促進するプロセス、または知識、スキル、価値観、道徳、信念、習慣、および自己啓発の習得を促進するプロセスです。"
+      "description": "知識、スキル、価値観、道徳、信念の獲得を促進し、個人の成長を促進するプロセスです。"
     },
     "managementAndLeadership": {
       "title": "管理とリーダーシップ",
-      "description": "組織に影響を与え、組織に最大の価値をもたらすために十分な努力をしてください。"
+      "description": "影響力を発揮し、組織に最大の価値をもたらします。"
+    },
+    "mindfulness": {
+      "title": "マインドフルネス",
+      "description": "特定の対象に思考を集中し、注意深く観察する安定した精神状態です。"
     }
   },
   "footer": {
